--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -13,7 +13,7 @@
     {% endgimme %}
   {% endgimmelist %}
 {% endif %}
-<article class="articleGrid__item {{ class }}">
+<article class="{{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
     <figure>
       <img src="{{ rend610 }}" alt="{{ imgCaption }}" />
