--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -113,7 +113,7 @@
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
-												href='/spass-unterhaltung/spiele') }}>Spiele</a></h3>
+												href='/spass-unterhaltung/spiele'>Spiele</a></h3>
 										<div class="row">
 											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
 												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
@@ -128,24 +128,24 @@
 										</div>
 									</div>
 								</div>
+
 								<div class="row">
-									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href='/diaet-ernaehrung'> DIÄT </a></h3>
-									</div>
-									<div class="articleGrid ">
-										{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
-										{% if loop.index == 1 %}
-										<div class="articleGrid col-12 col-sm-6">
-										{% include 'partials/mainArticleList.html.twig' with {'class' : 'articleGrid__item--fourColumns', 'image':'small', 'deck': 'none'} %}
+									<div class="col-12 col-md-6">
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
+										<div class="row">
+											<div class="articleGrid col-12 col-sm-6">
+											{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
+											{% endgimmelist %}
 										</div>
-										{% else %}
 										<div class="articleListSmall col-12 col-sm-6">
-											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleListSmall__item col-12 col-sm-6'} %}
-										</div>
-										{% endif %}
+											{% gimmelist article from articles|start(1)|limit(3) with {'route': '/diaet-ernaehrung'}  %}
+											{% include 'partials/articleListSmall__item.html.twig'  %}
 										{% endgimmelist %}
 										</div>
+									</div>
 								</div>
+
 							<div class="row">
 								<div class="col-12">
 									<div class="row">
