--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -130,7 +130,7 @@
 								</div>
 
 								<div class="row">
-									<div class="col-12 col-md-6">
+									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
 										<div class="row">
 											<div class="articleGrid col-12 col-sm-6">
