--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -114,7 +114,7 @@
     })();
 </script>
 
-<div class="topBar">
+<div class="topBar d-none d-sm-block">
     <div class="container">
         <div class="row">
 
