--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -128,43 +128,25 @@
 										</div>
 									</div>
 								</div>
-
-
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
-											<div class="row">
-												<div class="articleGrid col-12 col-sm-6">
-													{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
-													{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
-													{% endgimmelist %}
-												</div>
-											</div>
-										<div class="articleListSmall col-12 col-sm-6">
-											{% gimmelist article from articles|start(1)|limit(3) with {'route': '/diaet-ernaehrung'}  %}
-											{% include 'partials/articleListSmall__item.html.twig'  %}
-											{% endgimmelist %}
+									</div>
+									{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+										<div class="articleGrid col-12 col-sm-6">
+											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
 										</div>
+									{% endgimmelist %}
+									<div class="col-12 col-sm-6">
+										<div class="row">
+											{% gimmelist article from articles|start(1)|limit(3) with {'route': '/diaet-ernaehrung'}  %}
+												<div class="articleListSmall col-12">
+													{% include 'partials/articleListSmall__item.html.twig'  %}
+												</div>
+											{% endgimmelist %}
+										<div>
 									</div>
 								</div>
-
-								<div class="row">
-									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT2</a></h3>
-									</div>
-										{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
-											<div class="articleGrid col-12 col-sm-8">
-										{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
-											</div>
-										{% endgimmelist %}
-										{% gimmelist article from articles|start(1)|limit(3) with {'route': '/diaet-ernaehrung'}  %}
-											<div class="articleListSmall col-12 col-sm-8">
-											{% include 'partials/articleListSmall__item.html.twig'  %}
-											</div>
-										{% endgimmelist %}
-								</div>
-
-
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30">
