--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -132,7 +132,7 @@
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
 									</div>
-									<div clas="col-12">
+									<div class="col-12">
 										<div class="row">
 											{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
 											<div class="articleGrid col-12 col-sm-6">
