--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -171,7 +171,7 @@
 									</div>
 								</div>
 							</div>
-
+</div>
 								<div class="row">
 										<div class="col-12">
 											<h3 class="sectionHeadingBold marginTop30"><a href='/mode-schoenheit'>Mode &amp; Schönheit</a>
