--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -146,7 +146,26 @@
 									</div>
 								</div>
 
+								<div class="row">
+									<div class="col-12">
+										<h3 class="sectionHeadingBold marginTop30"><a
+												href='/spass-unterhaltung/spiele'> DIÄT </a></h3>
+										<div class="row">
+											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
+												{% endgimmelist %}
+											</div>
+											<div class="articleListSmall col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(1)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+												{% include 'partials/articleListSmall__item.html.twig'  %}
+												{% endgimmelist %}
+											</div>
+										</div>
+									</div>
+								</div>
 
+{#}
 <div class="row">
 	<div class="col-12">
 		<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
@@ -172,6 +191,7 @@
 		</div>
 	</div>
 </div>
+#}
 								<div class="row">
 										<div class="col-12">
 											<h3 class="sectionHeadingBold marginTop30"><a href='/mode-schoenheit'>Mode &amp; Schönheit</a>
