--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -1,13 +1,13 @@
 {# cache 'gridItem'~class {gen: article} #}
 {% if article.featureMedia %}
-  {% gimme rendition with { 'media': article.featureMedia, 'name': '567p', 'fallback': 'original' } %}
+  {% gimme rendition with { 'media': article.featureMedia, 'name': '216p', 'fallback': 'original' } %}
     {% set rend610 = path(rendition) %}
     {% set imgCaption = article.featureMedia.description %}
   {% endgimme %}
 {% else %}
   {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
     {% set imgCaption = media.body %}
-    {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
+    {% gimme rendition with { media: media, 'name': '216p', 'fallback': 'original' } %}
          {% set rend610 = path(rendition) %}
     {% endgimme %}
   {% endgimmelist %}
