--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -10,7 +10,7 @@
 	{% endif %}
 	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
-		      {{ dump(item.values.content.featureMedia) }}
+		      {{ dump(item.values.content.featureMedia.renditions) }}
 	{% if loop.first %}
 	{% if brNews %}
 	{% include 'partials/breaking-news.html.twig' with { 'article': item.content } %}
