--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -149,7 +149,7 @@
 								<div class="row mb-4">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold my-3"><a
-												href='/spass-unterhaltung/diaet-ernaehrung'> DIÄT </a></h3>
+												href='/diaet-ernaehrung'> DIÄT </a></h3>
 										<div class="row">
 											<div class="articleGrid col-12 col-md-6">
 												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
