--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -39,7 +39,7 @@
 											{% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--threeColumns col-12 col-lg-4 mb-3 mb-md-4' } %}
 											{% endif %}
 											{% if (item.values.position == 4) or (item.values.position == 5) or (item.values.position == 13) or (item.values.position == 14) or (item.values.position == 22) or (item.values.position == 23)  %}
-											{% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--twoColumns col-12 col-md-6 lg-3 mb-md-4' } %}
+											{% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--twoColumns col-12 col-lg-6 mb-3 mb-md-4' } %}
 											{% endif %}
 											{% endif %}
 
