--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -117,12 +117,12 @@
 										<h3 class="sectionHeadingBold my-3"><a
 												href='/spass-unterhaltung/spiele'>Spiele</a></h3>
 										<div class="row">
-											<div class="articleGrid col-12 col-md-6">
+											<div class="articleGrid col-12 col-lg-6">
 												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
 												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
 												{% endgimmelist %}
 											</div>
-											<div class="articleListSmall col-12 col-md-6">
+											<div class="articleListSmall col-12 col-lg-6">
 												{% gimmelist article from articles|start(1)|limit(3)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
 												{% include 'partials/articleListSmall__item.html.twig'  %}
 												{% endgimmelist %}
@@ -140,7 +140,7 @@
 									<div class="col-12">
 										<div class="articleGrid row d-flex">
 											{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
-											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-md-6 col-lg-3'} %}
+											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-lg-6 col-xl-3'} %}
 											{% endgimmelist %}
 										</div>
 									</div>
@@ -151,12 +151,12 @@
 										<h3 class="sectionHeadingBold my-3"><a
 												href='/diaet-ernaehrung'> DIÄT </a></h3>
 										<div class="row">
-											<div class="articleGrid col-12 col-md-6">
+											<div class="articleGrid col-12 col-lg-6">
 												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
 												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
 												{% endgimmelist %}
 											</div>
-											<div class="articleListSmall col-12 col-md-6">
+											<div class="articleListSmall col-12 col-lg-6">
 												{% gimmelist article from articles|start(1)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
 												{% include 'partials/articleListSmall__item.html.twig'  %}
 												{% endgimmelist %}
@@ -173,7 +173,7 @@
 									<div class="col-12">
 										<div class="articleGrid row d-flex">
 											{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/mode-schoenheit'}  %}
-											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-md-6 col-lg-3'} %}
+											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-lg-6 col-xl-3'} %}
 											{% endgimmelist %}
 										</div>
 									</div>
