--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -231,7 +231,7 @@
 <footer class="footer" style="padding-bottom: 0">
     <div class="container">
         <div class="row">
-            <div class="footer__logo col-12 col-sm-2">
+            <div class="d-flex justify-content-center footer__logo col-12 col-sm-2">
                 <a href='/'><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
             </div>
             <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
