--- a/public/css/elements/_helpers.sass
+++ b/public/css/elements/_helpers.sass
@@ -41,6 +41,8 @@
   &:last-child
     border-bottom: none
   &:first-child
+    border-top: 1px dotted #cccccc
     border-bottom: 1px dotted #cccccc
+    padding-top: 20px
     +sm
       border-bottom: none
