--- a/public/css/elements/_helpers.sass
+++ b/public/css/elements/_helpers.sass
@@ -45,4 +45,6 @@
     border-bottom: 1px dotted #cccccc
     padding-top: 20px
     +sm
+      border-top: none
+      paddin-top: 0px
       border-bottom: none
