--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -14,7 +14,7 @@
   {% endgimmelist %}
 
 {% else %}
-  {% set rend610 ='{{ asset('/public/img/next') }}' %}
+  {% set rend610 ='{{ asset('/public/img/next.png') }}' %}
 {% endif %}
 <article class="{{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
