--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -12,8 +12,8 @@
          {% set rend610 = path(rendition) %}
     {% endgimme %}
   {% endgimmelist %}
-
 {% else %}
+  {% set rend610 = "{{ asset('images/logo.png') }}" %}
 {% endif %}
 <article class="{{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
