--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -13,7 +13,7 @@
     {% endgimme %}
   {% endgimmelist %}
 {% else %}
-  {% set rend610 = 'public/img/logo.png' %}
+  {% set rend610 = 'public/img/bilderfrau.png' %}
 {% endif %}
 <article class="{{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
