--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -9,7 +9,7 @@
     {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
       {% set rend1250 = path(rendition) %}
     {% endgimme %}
-  {% else %}
+  {% elseif articleMedia %}
     {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
       {% set imgCaption = media.body %}
       {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
@@ -19,6 +19,8 @@
            {% set rend1250 = path(rendition) %}
       {% endgimme %}
     {% endgimmelist %}
+    {% else %}
+     <div>This is the else</div>
   {% endif %}
 
               <a href="{{ url(article) }}">
