--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -2,6 +2,7 @@
 <article class="mainArticleList {{class}}">
             <figure class="mainArticleList__image {% if image =='small' %}mainArticleList__image--small{% endif %} ">
   {% if article.featureMedia %}
+  <div>123</div>
     {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
       {% set rend610 = path(rendition) %}
       {% set imgCaption = article.featureMedia.description %}
@@ -9,8 +10,8 @@
     {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
       {% set rend1250 = path(rendition) %}
     {% endgimme %}
-  {% elseif articleMedia %}
-       <div>This is the first</div>
+  {% else %}
+    <div>456</div>
     {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
       {% set imgCaption = media.body %}
       {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
@@ -20,8 +21,6 @@
            {% set rend1250 = path(rendition) %}
       {% endgimme %}
     {% endgimmelist %}
-    {% else %}
-     <div>This is the second</div>
   {% endif %}
 
               <a href="{{ url(article) }}">
