--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -13,6 +13,7 @@
 
           <figure class="mainArticleList__image{% if image =='small' %}mainArticle__image--small{% endif %} ">
             {% if article.featureMedia %}
+            <div>123</div>
               {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
                 {% set rend610 = path(rendition) %}
                 {% set imgCaption = article.featureMedia.description %}
@@ -21,6 +22,7 @@
                 {% set rend1250 = path(rendition) %}
               {% endgimme %}
             {% else %}
+              <div>456</div>
               {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
                 {% set imgCaption = media.body %}
                 {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
