--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -22,7 +22,7 @@
                 {% set rend1250 = path(rendition) %}
               {% endgimme %}
             {% else %}
-              <div>456</div>
+                        <div>4567<div>
               {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
                 {% set imgCaption = media.body %}
                 {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
