--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -13,7 +13,8 @@
     {% endgimme %}
   {% endgimmelist %}
 {% else %}
-  {% set rend610 = 'public/img/article_img/610x380.png' %}
+    <div>44444444</div>
+  {# {% set rend610 = 'public/img/article_img/610x380.png' %} #}
 {% endif %}
 <article class="{{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
