--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -1,52 +1,49 @@
 {# cache 'gridItem'~class {gen: article} #}
+
 {% if article.featureMedia %}
-  {% gimme rendition with { 'media': article.featureMedia, 'name': '216p', 'fallback': 'original' } %}
+  {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
     {% set rend610 = path(rendition) %}
     {% set imgCaption = article.featureMedia.description %}
   {% endgimme %}
-{% elseif articleMedia %}
-  {# checks if there is any other media besides feature #}
+{% else %}
   {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
     {% set imgCaption = media.body %}
-    {% gimme rendition with { media: media, 'name': '216p', 'fallback': 'original' } %}
+    {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
          {% set rend610 = path(rendition) %}
     {% endgimme %}
   {% endgimmelist %}
-{% else %}
-    <div>44444444</div>
-  {# {% set rend610 = 'public/img/article_img/610x380.png' %} #}
 {% endif %}
-<article class="{{ class }}">
+
+<article class="articleGrid__item {{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
     <figure>
       <img src="{{ rend610 }}" alt="{{ imgCaption }}" />
     </figure>
   </a>
- {#
+
   {% set articleKicker = null %}
   {% for keyword in article.keywords %}
     {% if loop.first %}
     {% set articleKicker = keyword %}
     {% endif %}
   {% endfor %}
-  #}
+
   <a href="{{ url(article) }}">
-      <span class="articleGrid__kicker">
-      {{ article.featureMedia.body|striptags|upper|safeTruncate(160,"...") }}
-      </span>
-      <h3 class="articleGrid__headline">{{ article.title }}</h3>
+    {% if articleKicker %}<span class="articleGrid__kicker">{{ articleKicker }}</span>{% endif %}
+    <h3 class="articleGrid__headline">{{ article.title }}</h3>
   </a>
- {# <div class="articleMetadata">
-     if article.authors %}
+  <p class="articleGrid__text">
+      {{ article.lead|striptags|safeTruncate(160,"...") }}
+  </p>
+  <div class="articleMetadata">
+    {# if article.authors %}
       {% for author in article.authors %}
       <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
       {% endfor %}
     {% elseif article.metadata.byline %}
     <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
-    {% endif 
+    {% endif #}
     <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
     <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
-  </div>#}
+  </div>
 </article>
-
-{# endcache #}
