--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -4,6 +4,7 @@
 
   {% if article.featureMedia %}
   <div>123</div>
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
       {% set rend610 = path(rendition) %}
       {% set imgCaption = article.featureMedia.description %}
     {% endgimme %}
