--- a/views/partials/articleListSmall__item.html.twig
+++ b/views/partials/articleListSmall__item.html.twig
@@ -18,7 +18,7 @@
                 {% if rend610 %}
                 <a class="articleListSmall__image" href="{{ url(article) }}"><img src="{{ rend610 }}" alt="{{ imgCaption }}" width="90"  /></a>
                 {% else %}
-                <a class="articleListSmall__image" href="{{ url(article) }}"><img src="public/img/article_img/610x380.png" width="90"  /></a>
+                <a class="articleListSmall__image" href="{{ url(article) }}"><img src="public/img/bilderfrau.jpeg" width="90"  /></a>
                 {% endif %}
                 <h4 class="articleListSmall__headline"><a href="{{ url(article) }}">{{ article.title }}</a></h4>
                 <div class="articleMetadata">
