--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block logo %}
-    <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
+    <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12 offset-0 offset-sm-2">
       <a class="header__logo header__logo--section" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
       <h3 class="header__sectionName marginTop10">{{ gimme.route.name|capitalize }}</h3>
     </div>
