--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -31,8 +31,8 @@
                 {% endgimme %}
               {% endgimmelist %}
             {% else %}
-                    {% set rend610 = 'public/img/article_img/610x380.png' %}
-                    {% set rend1250 = 'public/img/article_img/610x380.png' %}
+                    {% set rend610 = 'public/img/bilderfrau.jpeg' %}
+                    {% set rend1250 = 'public/img/bilderfrau.jpeg' %}
             {% endif %}              
 
             <a href="{{ url(article) }}">
