--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -26,7 +26,7 @@
                 {% gimmelist route from routes %}
 
 
-                    <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
+                    <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
                         <h4 class="footer__sectionHeadline">{{ route.name }}</h4>
                         <ul class="footer__sectionTwoColumns">
                             {{ block('children') }}
