--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -17,7 +17,6 @@
 
     {#    {% endif %}#}
 
-    <ul>
 
 
             <ul>
@@ -27,7 +26,7 @@
                     <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
                         <h4 class="footer__sectionHeadline">{{ route.name }}</h4>
                         <ul class="footer__sectionTwoColumns">
-                            {{ block('children') }}
+{#                            {{ block('children') }}#}
                         </ul>
                     </div>
                 {% endgimmelist %}
