--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -19,42 +19,38 @@
 
 
 
-            <ul>
+{#            <ul>#}
+{#                {% gimmelist route from routes %}#}
+
+
+{#                    <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
+{#                        <h4 class="footer__sectionHeadline">{{ route.name }}</h4>#}
+{#                        <ul class="footer__sectionTwoColumns">#}
+{#                            {{ block('children') }}#}
+{#                        </ul>#}
+{#                    </div>#}
+{#                {% endgimmelist %}#}
+
+
+{#            </ul>#}
+
+
+            <div class="row">
                 {% gimmelist route from routes %}
 
+                <div class="col-6 col-md">
+                    <h5>{{ route.name }}</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#">Team</a></li>
+                        <li><a class="text-muted" href="#">Locations</a></li>
+                        <li><a class="text-muted" href="#">Privacy</a></li>
+                        <li><a class="text-muted" href="#">Terms</a></li>
+                    </ul>
+                </div>
 
-                    <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
-                        <h4 class="footer__sectionHeadline">{{ route.name }}</h4>
-                        <ul class="footer__sectionTwoColumns">
-{#                            {{ block('children') }}#}
-                        </ul>
-                    </div>
-                {% endgimmelist %}
 
 
-            </ul>
 
-    {#        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-    {#            {% import _self as knp_menu %}#}
-    {#          <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
-    {#            <h4 class="footer__sectionHeadline">Sections</h4>#}
-    {#            <ul class="footer__sectionTwoColumns">#}
-    {#                {{ block('children') }}#}
-    {#            </ul>#}
-    {#          </div>#}
-    {#        {% endif %}#}
-
-    {#        <div class="row">#}
-
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>About</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Team</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Locations</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
     {#            <div class="col-6 col-md">#}
     {#                <h5>About</h5>#}
     {#                <ul class="list-unstyled text-small">#}
@@ -112,7 +108,11 @@
     {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
     {#                </ul>#}
     {#            </div>#}
-    {#        </div>#}
+
+                {% endgimmelist %}
+
+            </div>
+
 
 
 
