--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -19,21 +19,6 @@
 
 
 
-{#            <ul>#}
-{#                {% gimmelist route from routes %}#}
-
-
-{#                    <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
-{#                        <h4 class="footer__sectionHeadline">{{ route.name }}</h4>#}
-{#                        <ul class="footer__sectionTwoColumns">#}
-{#                            {{ block('children') }}#}
-{#                        </ul>#}
-{#                    </div>#}
-{#                {% endgimmelist %}#}
-
-
-{#            </ul>#}
-
 
             <div class="row">
                 {% gimmelist route from routes %}
@@ -41,73 +26,17 @@
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Team</a></li>
-                        <li><a class="text-muted" href="#">Locations</a></li>
-                        <li><a class="text-muted" href="#">Privacy</a></li>
-                        <li><a class="text-muted" href="#">Terms</a></li>
+
+                        {% gimmelist route from routes with {parent: route.name} %}
+
+                            
+                            <li><a class="text-muted" href={{ url(route) }}>{{ route.name }}</a></li>
+
+                        {% endgimmelist %}
+
                     </ul>
                 </div>
 
-
-
-
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>About</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Team</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Locations</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>About</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Team</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Locations</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>About</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Team</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Locations</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
-
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>Features</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Cool stuff</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Random feature</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Team feature</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Stuff for developers</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Another one</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Last time</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>Resources</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Resource</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Resource name</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Another resource</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Final resource</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
-    {#            <div class="col-6 col-md">#}
-    {#                <h5>About</h5>#}
-    {#                <ul class="list-unstyled text-small">#}
-    {#                    <li><a class="text-muted" href="#">Team</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Locations</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
-    {#                    <li><a class="text-muted" href="#">Terms</a></li>#}
-    {#                </ul>#}
-    {#            </div>#}
 
                 {% endgimmelist %}
 
