--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -27,7 +27,7 @@
                     <h5>{{ route.name }}</h5>
                     <ul class="list-unstyled text-small">
 
-                        {% gimmelist subRoute from routes with {parent: route.name} %}
+                        {% gimmelist subRoute from routes with {parent: route.name} | without {parent: "Agbs"} %}
 
 
                             <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
