--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -6,6 +6,8 @@
             <div class="row">
                 {% gimmelist route from routes %}
 
+                    {{ dump (route) }}
+
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
 
