--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -14,7 +14,7 @@
 
 
             {#      exclude sub footer          #}
-            {% if (route.name != "Agbs") and (empty) %}
+            {% if (route.name != "Agbs") %}
 
 
                 <div class="col-6 col-md">
