--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -7,6 +7,13 @@
         <p>Search</p>
 </div>
 
+
+
+<div class="form__group">
+    <input type="text" class="form__input" placeholder="Full name" id="name" required>
+    <label for="name" class="form__label">Full name</label>
+</div>
+
 <script>
 
     const urlParams = new URLSearchParams(window.location.search);
