--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -7,8 +7,8 @@
 {#        <p>Search</p>#}
 
     <form class="form__group" method="GET" action="/app_dev.php/search">
-        <input type="text" class="form__input" placeholder="Search" id="name" required>
-        <label for="name" class="form__label">Search</label>
+        <input type="text" class="form__input" placeholder="Suchen nach..." id="name" required>
+        <label for="name" class="form__label">Suchen nach...</label>
     </form>
 
 {#</div>#}
