--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -85,6 +85,11 @@
         text-decoration: none;
         color:unset;
     }
+
+    .page-link:focus {
+        outline: none;
+    }
+
     .page-link:hover{
         color:unset;
 
