--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -234,7 +234,7 @@
             <div class="d-flex justify-content-center footer__logo col-12 col-sm-2">
                 <a href='/'><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
             </div>
-            <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
+            <div class="categoryItems col-12 col-sm-10 d-block">
 
                 {% container 'footerNav' %}
                     <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
