--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -41,7 +41,8 @@
         width: 90%;
         display: block;
         -webkit-transition: all .3s;
-        transition: all .3s
+        transition: all .3s;
+        font-style: unset;
     }
 
     @media only screen and (max-width: 56.25em) {
