--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -24,17 +24,39 @@
 
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
                 <ul class="navbar-nav">
-
-
-                        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
-                            {% import _self as knp_menu %}
-
-
+{#                    <li class="nav-item active">#}
+{#                        <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>#}
+{#                    </li>#}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> {{ block('children') }}</a>
+                        <a class="nav-link" href="#">Link</a>
                     </li>
-
-                        {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link disabled" href="#">Disabled</a>#}
+{#                    </li>#}
 
                 </ul>
             </div>
